# skn_rpi-display-services

./: .autotools  .gitignore  AUTHORS  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac
cmdDC/: Makefile.am  cmdDC.c
cmdDS/: Makefile.am  cmdDS.c
doc/def/: doxygen.def
doc/html/: Info.plist  Makefile  Nodes.xml  Tokens.xml  _8___makefile_8am.html  _8___makefile_8am_source.html  _makefile_8am.html  _makefile_8am_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  a2d__display__client_8c.html  a2d__display__client_8c.js  a2d__display__client_8c__incl.map  a2d__display__client_8c__incl.md5  a2d__display__client_8c_a0d9c1f78de300df3a47682ad0145c74c_icgraph.map  a2d__display__client_8c_a0d9c1f78de300df3a47682ad0145c74c_icgraph.md5  a2d__display__client_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.map  a2d__display__client_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a2d__display__client_8c_a11856a55dede9d8199ca0ad08d10d4b5_cgraph.map  a2d__display__client_8c_a11856a55dede9d8199ca0ad08d10d4b5_cgraph.md5  a2d__display__client_8c_a11856a55dede9d8199ca0ad08d10d4b5_icgraph.map  a2d__display__client_8c_a11856a55dede9d8199ca0ad08d10d4b5_icgraph.md5  a2d__display__client_8c_a14b82aad0ea6a4e3999d5e91f76d409d_cgraph.map  a2d__display__client_8c_a14b82aad0ea6a4e3999d5e91f76d409d_cgraph.md5  a2d__display__client_8c_a4502f91e3eae5d2711786c6be8b0f76c_cgraph.map  a2d__display__client_8c_a4502f91e3eae5d2711786c6be8b0f76c_cgraph.md5  a2d__display__client_8c_a4502f91e3eae5d2711786c6be8b0f76c_icgraph.map  a2d__display__client_8c_a4502f91e3eae5d2711786c6be8b0f76c_icgraph.md5  a2d__display__client_8c_a7103c23f637c6c8710a0766e61a8e436_cgraph.map  a2d__display__client_8c_a7103c23f637c6c8710a0766e61a8e436_cgraph.md5  a2d__display__client_8c_a7103c23f637c6c8710a0766e61a8e436_icgraph.map  a2d__display__client_8c_a7103c23f637c6c8710a0766e61a8e436_icgraph.md5  a2d__display__client_8c_a935f6a4b5fc20d0727532f09a2ab7ed7_icgraph.map  a2d__display__client_8c_a935f6a4b5fc20d0727532f09a2ab7ed7_icgraph.md5  a2d__display__client_8c_aa3e4c4ec57381e265a116d7a874e22c6_cgraph.map  a2d__display__client_8c_aa3e4c4ec57381e265a116d7a874e22c6_cgraph.md5  a2d__display__client_8c_aa3e4c4ec57381e265a116d7a874e22c6_icgraph.map  a2d__display__client_8c_aa3e4c4ec57381e265a116d7a874e22c6_icgraph.md5  a2d__display__client_8c_ad6bd912a7b382b644bea384e1db1a47b_cgraph.map  a2d__display__client_8c_ad6bd912a7b382b644bea384e1db1a47b_cgraph.md5  (+757 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  (+40 more)
doc/latex/: _makefile_8am.tex  a2d__display__client_8c.tex  a2d__display__client_8c__incl.md5  a2d__display__client_8c_a0d9c1f78de300df3a47682ad0145c74c_icgraph.md5  a2d__display__client_8c_a0ddf1224851353fc92bfbff6f499fa97_cgraph.md5  a2d__display__client_8c_a14b82aad0ea6a4e3999d5e91f76d409d_cgraph.md5  a2d__display__client_8c_a4502f91e3eae5d2711786c6be8b0f76c_cgraph.md5  a2d__display__client_8c_a4502f91e3eae5d2711786c6be8b0f76c_icgraph.md5  a2d__display__client_8c_a7103c23f637c6c8710a0766e61a8e436_cgraph.md5  a2d__display__client_8c_a7103c23f637c6c8710a0766e61a8e436_icgraph.md5  a2d__display__client_8c_a935f6a4b5fc20d0727532f09a2ab7ed7_icgraph.md5  a2d__display__client_8c_ad6bd912a7b382b644bea384e1db1a47b_cgraph.md5  a2d__display__client_8c_ad6bd912a7b382b644bea384e1db1a47b_icgraph.md5  annotated.tex  cmd_d_c_2_makefile_8am.tex  cmd_d_c_8c.tex  cmd_d_c_8c__incl.md5  cmd_d_c_8c_a00c5b52bdcb7caec07d08b05b8c1dced_icgraph.md5  cmd_d_c_8c_a0dfc1a6916909805dc7fd2d8c471e0e3_cgraph.md5  cmd_d_c_8c_a0dfc1a6916909805dc7fd2d8c471e0e3_icgraph.md5  cmd_d_c_8c_a160bb2056d3842ef84fd7211ed6ec385_cgraph.md5  cmd_d_c_8c_a160bb2056d3842ef84fd7211ed6ec385_icgraph.md5  cmd_d_c_8c_a385b710fd30ba190b3b96e814424ff80_cgraph.md5  cmd_d_c_8c_a385b710fd30ba190b3b96e814424ff80_icgraph.md5  cmd_d_c_8c_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  cmd_d_c_8c_a4f733621137368e762c5db74a3cec52b_cgraph.md5  cmd_d_c_8c_a568a9919cfd345f6c1a41a2ec7c4b1ca_icgraph.md5  cmd_d_c_8c_a72be87baa67e532c78af054acf935d6c_icgraph.md5  cmd_d_c_8c_a73ed6790a0276f43dfea595f4cedffa4_icgraph.md5  cmd_d_c_8c_a76ad4de5945cff6e20dbeff46bda868b_icgraph.md5  cmd_d_c_8c_a793c6b3e5c7a5abc993d8cfbe963629d_cgraph.md5  cmd_d_c_8c_a793c6b3e5c7a5abc993d8cfbe963629d_icgraph.md5  cmd_d_c_8c_a8288aea959581188e5bd29430935a6ed_icgraph.md5  cmd_d_c_8c_aa8a19e68e54683fa324bcee1ecfd3942_cgraph.md5  cmd_d_c_8c_aa8a19e68e54683fa324bcee1ecfd3942_icgraph.md5  cmd_d_c_8c_ae59da66ef51690f71da087514886fd12_icgraph.md5  cmd_d_c_8c_af376243f65a3fd761050836d1293b0d9_icgraph.md5  cmd_d_c_8c_af4d9de57a3cb296036c837a644009ef5_icgraph.md5  cmd_d_c_8c_afc164e6efc7bdcdbacba97ba6f6c2a19_cgraph.md5  cmd_d_c_8c_afc164e6efc7bdcdbacba97ba6f6c2a19_icgraph.md5  (+265 more)
gssdpDC/: Makefile.am  gssdpDC  gssdpDC.c
gtkDS/: Makefile.am  gtkDS.c
iscripts/: lcddisplayclient.service  net.skoona.skn_rpi-display-client.plist  net.skoona.skn_rpi-locator-service.plist  udplocator.service
src/: Makefile.am  Makefile.in  a2d_display_client.c  lcd_display_client.c  lcd_display_service.c  para_display_client.c  skn_common_headers.h  skn_commons.c  skn_commons.h  skn_display_manager.c  skn_display_manager.h  skn_network_helpers.c  skn_network_helpers.h  skn_rpi_helpers.c  skn_rpi_helpers.h  skn_service_registry.c  skn_service_registry.h  skn_signal_manager.c  skn_signal_manager.h  skn_udp_service_provider.c  skn_udp_service_provider.h  udp_locator_client.c  udp_locator_service.c
